// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringInput renders type string with options 1`] = `
<DocumentFragment>
  <select
    aria-label="Test label: select-option"
    class="form-control criterion-input form-control"
    data-testid="options-string"
  >
    <option
      value="defaultValue"
    >
      Default Value
    </option>
    <option
      value="Liferay"
    >
      LIFERAY
    </option>
  </select>
</DocumentFragment>
`;

exports[`StringInput renders type string with options disabled 1`] = `
<DocumentFragment>
  <select
    aria-label="Test label: select-option"
    class="form-control criterion-input form-control"
    data-testid="options-string"
  >
    <option
      disabled=""
      value="defaultValue"
    >
      Default Value
    </option>
    <option
      value="Liferay"
    >
      LIFERAY
    </option>
  </select>
</DocumentFragment>
`;

exports[`StringInput renders type string with value 1`] = `
<DocumentFragment>
  <input
    aria-label="Test label: input-a-value"
    class="criterion-input form-control"
    data-testid="simple-string"
    type="text"
    value="defaultValue"
  />
</DocumentFragment>
`;

exports[`StringInput renders with type string 1`] = `
<DocumentFragment>
  <input
    aria-label="Test label: input-a-value"
    class="criterion-input form-control"
    data-testid="simple-string"
    type="text"
    value=""
  />
</DocumentFragment>
`;
